[package]
name = "bevy_libp2p"
version = "0.1.0"
publish = false
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = ["mobile"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
# dev = ["bevy/bevy_dylib"]

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "filesystem_watcher",
    "hdr",
    "ktx2",
    "png",
    "tonemapping_luts",
    "webgl2",
    "x11",
    "zstd",
] }
bevy_kira_audio = { version = "0.16", features = ["mp3"] }
bevy_asset_loader = { version = "0.17" }
rand = { version = "0.8.3" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }
libp2p = { version = "0.52.3", features = ["full"] }
bevy-inspector-egui = "0.19.0"
anyhow = "1.0.75"
async-std = "1.12.0"
aes-gcm = "0.10.2"
generic-array = "0.14.7"
futures = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
log = "0.4.20"

[build-dependencies]
embed-resource = "1.8"
